2009-06-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Merg origin.
	* ChangeLog,
	* src/roboptim-core-cfsqp-plugin.cc: Merge.

2009-06-25  Thomas Moulard  <thomas.moulard@gmail.com>
	Fix constraints' final value computation.
	* src/roboptim-core-cfsqp-plugin.cc: Fix fillConstraint
	to take into account the fact that constraints are transformed
	to be expressed as g(x) <= 0 or g(x) >= 0.
	* tests/optimization-problem-1.stdout: Regenerate.

2009-06-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Fill constraints vector in result class.
	* include/roboptim/core/plugin/cfsqp.hh: Add fillConstraints
	prototype.
	* src/roboptim-core-cfsqp-plugin.cc: Fill constraints
	vector in result.
	* tests/optimization-problem-1.stdout: Regenerate.

2009-06-18  Thomas Moulard  <thomas.moulard@gmail.com>
	Merging with origin.
	* ChangeLog,
	* tests/optimization-problem-1.cc,
	* tests/plugin.cc,
	* tests/plugin.stdout,
	* tests/simple.cc,
	* tests/simple.stdout:
	Merge origin into local modifications.

2009-06-24  Thomas Moulard  <thomas.moulard@gmail.com>
	Fix wrong assertions.
	* src/roboptim-core-cfsqp-plugin.cc: Fix broken assertions
	in constraint evaluation (value and gradient).

2009-06-18  Thomas Moulard  <thomas.moulard@gmail.com>
	Make test suite more flexible.
	* tests/optimization-problem-1.cc,
	* tests/plugin.cc,
	* tests/simple.cc: Do not display solver warnings
	on cout to avoid failure if the warning is different.
	* tests/plugin.stdout,
	* tests/simple.stdout: Regenerate.

2009-06-17  Thomas Moulard  <thomas.moulard@gmail.com>

	Remove Libtool warning.
	* tests/Makefile.am: Here.

2009-06-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Regenerate output on 32 bits machine.
	* tests/plugin.stdout,
	* tests/simple.stdout: Here.

2009-06-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix test suite.
	* tests/hs071.hh,
	* tests/optimization-problem-1.cc,
	* tests/plugin.cc,
	* tests/simple.cc: Fix test suite.

2009-06-16  Thomas Moulard  <thomas.moulard@gmail.com>
